5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4352/executions/1577_1333.log
== TEST (2019-03-15 21:39:57) 
-- CODE:
expressao = round(29,888)
print(expressao)
-- OUTPUT:
29
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 21:40:03) 
-- CODE:
expressao = round(29,888)
print(expressao)
-- EXECUTION TIME:
0.135415
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
29
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 21:40:20) 
-- CODE:
expressao =
print(expressao)
-- ERROR:
File "XXXX", line 1
    expressao =
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 21:40:23) 
-- CODE:
expressao =
print(expressao)
-- EXECUTION TIME:
0.198231
-- ERROR:
  File "/home/codebench/codes/1577/1333/main.py", line 1
    expressao =
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 21:41:12) 
-- CODE:
expressao = 30-3**2+8//3**2*10
print(expressao)
-- OUTPUT:
21
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 21:41:38) 
-- CODE:
print(30-3**2+8//3**2*10)
-- OUTPUT:
21
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 21:41:41) 
-- CODE:
print(30-3**2+8//3**2*10)
-- OUTPUT:
21
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 21:41:42) 
-- CODE:
print(30-3**2+8//3**2*10)
-- EXECUTION TIME:
0.120956
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
21
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-17 17:32:18) 
-- CODE:
print(30-3**2+8//3**2*10)
-- EXECUTION TIME:
0.132215
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
21
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
